--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -44,7 +44,7 @@ http {
             root   /home/box/web/;
         }
 
-        location ~* \.*$ {
+        location ~* *.*$ {
             root   /home/box/web/public;
         }
 
