--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -13,6 +13,7 @@ events {
     worker_connections  1024;
 }
 
+error_log /home/box/web/nginx.error_log
 
 http {
     include       mime.types;
@@ -35,17 +36,12 @@ http {
     server {
         listen       80;
 
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
         location ^~ /uploads/ {
             root   /home/box/web/;
         }
 
         location ~* *.*$ {
-            root   /home/box/web/public;
+            root   /home/box/web/public/;
         }
 
         #error_page  404              /404.html;
