--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -16,23 +16,6 @@ events {
 error_log /home/box/web/nginx.error_log
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
-
-    #gzip  on;
-
     server {
         listen       80;
 
@@ -40,18 +23,13 @@ http {
             root   /home/box/web/;
         }
 
-        location ~* *.*$ {
+        location ~* ^.+\.\w+$ {
             root   /home/box/web/public/;
         }
 
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
+        location / {
+            return 404;
+            }
         }
     }
-    include servers/*;
 }
