--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,19 +1,18 @@
-error_log /home/box/web/nginx.error_log
-
 server {
-    listen       80;
+    listen 80 default_server;
+    error_log /home/box/web/error.log;
+    access_log /home/box/web/access.log;
 
     location ^~ /uploads/ {
-        root   /home/box/web/;
+        root /home/box/web;
     }
 
-    location ~* ^.+\.\w+$ {
-        root   /home/box/web/public/;
+    location ~* \.w\w\w?\w?$ {
+        root /home/box/web/public;
     }
 
     location / {
         return 404;
-        }
+    }
 }
-
 
