--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80 default_server;
+    listen 80;
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
 
@@ -7,7 +7,7 @@ server {
         root /home/box/web;
     }
 
-    location ~* \.w\w\w?\w?$ {
+    location ~* ^.+\.\w+$ {
         root /home/box/web/public;
     }
 
