--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,16 +3,14 @@ server {
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
 
-    location ^~ /uploads/ {
-        root /home/box/web;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+
+    location 127.0.0.1/hello/ {
+        proxy_pass http://0.0.0.0:8080;
     }
 
-    location ~* ^.+\.\w+$ {
-        root /home/box/web/public;
-    }
-
-    location / {
-        return 404;
+    location 127.0.0.1:8080 {
+        proxy_pass http://0.0.0.0:8080;
     }
 }
-
