--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,11 +6,7 @@ server {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
 
-    location 127.0.0.1/hello/ {
-        proxy_pass http://0.0.0.0:8080;
-    }
-
-    location 127.0.0.1:8080 {
-        proxy_pass http://0.0.0.0:8080;
+    location /hello/ {
+        proxy_pass http://127.0.0.1:808;
     }
 }
